// Copied from https://grpc.io/docs/quickstart/java.html#update-a-grpc-service

syntax = "proto3";

option java_package = "io.grpc.examples.generated";

// The greeter service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }

}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}


